fix: added game-container div

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Romantic Journey</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+  <style>
+    body {
+      margin: 0;
+      background: #000;
+    }
+  </style>
 </head>
 <body>
-  <h1>Romantic Journey 💖</h1>
   <div id="game-container"></div>
+
   <script src="game.js"></script>
 </body>
 </html>
