--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 </head>
 <body>
   <div id="game-container"></div>
+<div style="text-align: center; margin-top: 10px;">
+  <label for="volumeSlider" style="color: white;">🔊 Volume:</label>
+  <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5">
+</div>
 
   <!-- Phaser library -->
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
