--- a/index.html
+++ b/index.html
@@ -1,76 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Romantic Journey 8bit</title>
-
-  <!-- 8-bit Pixel Font (optional) -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <title>Mein Phaser-Spiel</title>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
-      background-color: black;
-      font-family: 'Press Start 2P', cursive;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #000;
     }
 
-    canvas {
-      display: block;
-      margin: 0 auto;
-      background-color: black;
-      image-rendering: pixelated;
-    }
-
-    #volume-container {
-      text-align: center;
-      margin-top: 10px;
-      color: #00ffcc;
-      font-size: 10px;
+    #game-container {
+      width: 800px;
+      height: 600px;
+      position: relative;
     }
 
     #volumeSlider {
+      margin-top: 20px;
       width: 200px;
-      height: 10px;
-      appearance: none;
-      background-color: #444;
-      border: 2px solid #00ffcc;
-      border-radius: 4px;
-      outline: none;
-      margin-top: 5px;
-    }
-
-    #volumeSlider::-webkit-slider-thumb {
-      appearance: none;
-      width: 12px;
-      height: 12px;
-      background: #00ffcc;
-      cursor: pointer;
-    }
-
-    #volumeSlider::-moz-range-thumb {
-      width: 12px;
-      height: 12px;
-      background: #00ffcc;
-      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <!-- Phaser Canvas -->
   <div id="game-container"></div>
-
-  <!-- Volume Control -->
-  <div id="volume-container">
-    <label for="volumeSlider">🔊 Volume:</label>
-    <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5">
-  </div>
-
-  <!-- Phaser library -->
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
-  <!-- Game logic -->
+  <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5">
   <script src="game.js"></script>
 </body>
 </html>
