--- a/index.html
+++ b/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mein Phaser-Spiel</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Happy Birthday Maneli</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      height: 100vh;
+      background: #000;
+      overflow: hidden;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      background-color: #000;
+      align-items: center;
+      height: 100vh;
     }
 
     #game-container {
-      width: 800px;
-      height: 600px;
-      position: relative;
+      width: 100%;
+      max-width: 800px;
+      aspect-ratio: 4 / 3;
     }
 
-    #volumeSlider {
-      margin-top: 20px;
-      width: 200px;
+    #volumeControl {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
     }
   </style>
 </head>
 <body>
   <div id="game-container"></div>
-  <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5">
+  <div id="volumeControl">
+    <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5">
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
